--- a/index.Rmd
+++ b/index.Rmd
@@ -1261,7 +1261,7 @@ df |>
   select(var, x:y, id)
 ```
 
-### 変数名を自由に分割する　★作成中
+### 変数名を自由に分割する
 
 * `names_pattern`で変数名を自由に分割できる
 
@@ -1279,6 +1279,12 @@ a+|1以上|"a+"|.**a**.**aa**.**aaa**
 a{n}|n|"a{2}"|.a.**aa**.**aa**a
 a{n,}|n以上|"a{2,}"|.a.**aa**.**aaa**
 
+#### 1つめのアンダーバーで分割
+
+* ここでは1つめのアンダーバーの前が1文字のため`(.{1})_(.*)"`としている
+
+* 2文字であれば`(.{2})_(.*)"`, 3文字以内であれば`(.{1,3})_(.*)"`などで対応できる
+
 ```{r}
 # var，x_m，x_sd，x_all_percent, y_m，y_sd, y_all_percentの変数を追加したオブジェクトを作成
 df <- tribble(
@@ -1292,14 +1298,40 @@ df
 # var以外の変数をピボットしたいので，cols = !varとする
 # 選んだ変数名のうち"x_m"か"x_sd"ならば"x"，"y_1"か"y_2"ならば"y"で"item"という名前の変数に格納したいので，names_toに"item"を入れる
 # 加えて"m"，"sd"，"all_percent"という名前の変数を作りたいので，names_toに".value"も入れる
-# "x_m"，"x_sd"，"x_all_percent"ならば"x_"，"y_m"，"y_sd"，"y_all_percent"ならば"y_"で分割したいので，names_patternに"(.{1})_(.+)"を入れる
-# "(.{1})_(.+)"とは"任意の1文字_任意の文字を任意の文字数"ということを意味する
+# "x_m"，"x_sd"，"x_all_percent"ならば"x_"，"y_m"，"y_sd"，"y_all_percent"ならば"y_"で分割したいので，names_patternに"(.{1})_(.*)"を入れる
+# "(.{1})_(.*)"とは"任意の1文字_任意の文字を0文字以上"ということを意味する
 
 df |> 
   pivot_longer(
     cols = !var, 
     names_to = c("item", ".value"), 
-    names_pattern = "(.{1})_(.+)"
+    names_pattern = "(.{1})_(.*)"
+    ) 
+```
+
+#### 最後のアンダーバーで分割
+
+```{r}
+# var，m_x，sd_x，all_percent_x, m_y，sd_y, all_percent_yの変数を追加したオブジェクトを作成
+df <- tribble(
+  ~var, ~m_x, ~sd_x, ~all_percent_x, ~m_y, ~sd_y, ~all_percent_y,
+   "A",    1,    2,               3,    4,     5,              6,
+   "B",    7,    8,               9,   10,    11,             12
+)
+
+df
+
+# var以外の変数をピボットしたいので，cols = !varとする
+# 選んだ変数名のうち"m_x"か"m_y"ならば"m"，"sd_x"か"sd_y"ならば"sd"，"all_percent_x"か"all_percent_y"ならば"all_percent"で"item"という名前の変数に格納したいので，names_toに"item"を入れる
+# 加えて"x"，"y"という名前の変数を作りたいので，names_toに".value"も入れる
+# "m_x"，"sd_x"，"all_percent_x"ならば"_x"，"m_y"，"sd_y"，"all_percent_y"ならば"_y"で分割したいので，names_patternに"(.*)_(.*)"を入れる
+# "(.*)_(.*)"とは"任意の文字を0文字以上_任意の文字を0文字以上"ということを意味する
+
+df |> 
+  pivot_longer(
+    cols = !var, 
+    names_to = c("item", ".value"), 
+    names_pattern = "(.*)_(.*)"
     ) 
 ```
 
@@ -1604,8 +1636,10 @@ x |>
 
 * ある値のときにa，そうでないときにbと条件指定したい場合は`if_else`が使える
 
+#### 連続量
+
 ```{r}
-# "flag"変数に"bill_length_mm"が"35以上"のときに，そうでないときに0を入れる
+# "flag"変数に"bill_length_mm"が"35以上"のときに1，そうでないときに0を入れる
 # count()で"bill_length_mm"と"flag"を確認
 # print()で20行目まで確認
 penguins |> 
@@ -1614,9 +1648,30 @@ penguins |>
   print(n = 20)
 ```
 
-### 複数の条件（case_when）★作成中
+#### 欠損
+
+```{r}
+# var，xの変数を追加したオブジェクトを作成
+df <- tribble(
+  ~var,   ~x, 
+   "A","yes",  
+   "B",   NA,
+   "C","yes",
+   "D",   NA
+)
+
+df
+
+# "flag"変数に"x"が"yes"のときに1，欠損のときに0を入れる
+df |> 
+  mutate(flag = if_else(is.na(x), 0, 1))
+```
+
+### 複数の条件（case_when）
 
 * ある値のときにa，ある値のときにb，ある値のときにcと条件指定したい場合は`case_when`が使える
+
+#### 連続量
 
 ```{r}
 # "flag"変数に"bill_length_mm"が"50以上"のときに"50-"，40以上のときに"40-50"，30以上のときに"30-40"を入れる
@@ -1634,6 +1689,29 @@ penguins |>
                           bill_length_mm >= 40 ~ "40-50",
                           bill_length_mm >= 30 ~ "30-40")) |> 
   count(bill_length_mm, flag)
+```
+
+#### 一部のみ
+
+```{r}
+# "fruit"の変数を追加したオブジェクトを作成
+df <- 
+  tribble(
+    ~fruit, 
+      "apple",
+      "banana",
+      "melon",
+      "strawberry",
+      "orange",
+      "peach",
+      "green apple")
+
+df
+
+# "new_fruit"変数に"fruit"が"green apple"のときに"apple"，それ以外は"fruit"を入れる
+df |> 
+  mutate(new_fruit = case_when(fruit == "green apple" ~ "apple", 
+                               TRUE ~ fruit))
 ```
 
 ## 正規表現
